[tool.poetry]
name = "exploratory-data-analysis"
version = "0.1.0"
description = ""
authors = ["Qandle <unmistakework@hotmail.com>"]
readme = "README.md"
packages = [{include = "exploratory_data_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
